--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "symfony/yaml": "^4.0",
     "symfony/process": "^4.1",
     "symfony/finder": "^4.1",
+    "guzzlehttp/guzzle": "^6.3.3",
     "psr/log": "^1"
   },
   "require-dev" : {
