--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "symfony/process": "^4.1",
     "symfony/finder": "^4.1",
     "guzzlehttp/guzzle": "^6.3.3",
-    "psr/log": "^1"
+    "psr/log": "^1",
+    "opis/json-schema": "^1.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
