--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,15 @@
   "require-dev" : {
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.2",
-    "phpstan/phpstan": "^0.9.2",
-    "thecodingmachine/phpstan-strict-rules": "^0.9.0"
+    "phpstan/phpstan": "^0.10",
+    "thecodingmachine/phpstan-strict-rules": "dev-phpstan_0.10"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:Slamdunk/phpstan-strict-rules.git"
+    }
+  ],
   "autoload" : {
     "psr-4" : {
       "TheAentMachine\\" : "src/"
