--- a/composer.json
+++ b/composer.json
@@ -35,14 +35,8 @@
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.10",
-    "thecodingmachine/phpstan-strict-rules": "dev-phpstan_0.10"
+    "thecodingmachine/phpstan-strict-rules": "^0.10"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:Slamdunk/phpstan-strict-rules.git"
-    }
-  ],
   "autoload" : {
     "psr-4" : {
       "TheAentMachine\\" : "src/"
