--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "require" : {
     "php" : ">=7.1",
     "symfony/console": "^4.0",
-    "symfony/yaml": "^4.0",
+    "symfony/yaml": "4.1.1",
     "symfony/process": "^4.1",
     "symfony/finder": "^4.1",
     "symfony/filesystem": "^4.1",
