--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
 - composer phpunit
 - composer phpstan
 - composer cs-check
-#after_success:
-#- vendor/bin/coveralls -v
+after_success:
+- bash <(curl -s https://codecov.io/bash)
