--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.10.3",
-    "thecodingmachine/phpstan-strict-rules": "^0.10.3"
+    "thecodingmachine/phpstan-strict-rules": "^0.10.3",
+    "gamez/psr-testlogger": "^3"
   },
   "autoload" : {
     "psr-4" : {
