--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,16 @@
     "guzzlehttp/guzzle": "^6.3.3",
     "psr/log": "^1",
     "opis/json-schema": "^1.0",
-    "docker-php/docker-php": "^2"
+    "docker-php/docker-php": "^2",
+    "thecodingmachine/safe": "^0.1.0@dev"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.10.3",
+    "gamez/psr-testlogger": "^3",
     "thecodingmachine/phpstan-strict-rules": "^0.10.3",
-    "gamez/psr-testlogger": "^3"
+    "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev"
   },
   "autoload" : {
     "psr-4" : {
@@ -64,5 +66,7 @@
     "branch-alias": {
       "dev-master": "1.0-dev"
     }
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
