--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.10.3",
     "thecodingmachine/phpstan-strict-rules": "^0.10.3",
+    "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev",
     "gamez/psr-testlogger": "^3"
   },
   "autoload" : {
