--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,15 @@
     "guzzlehttp/guzzle": "^6.3.3",
     "psr/log": "^1",
     "opis/json-schema": "^1.0",
-    "docker-php/docker-php": "^2",
-    "thecodingmachine/safe": "^0.1.0@dev"
+    "docker-php/docker-php": "^2"
   },
   "require-dev" : {
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "^3.2",
     "phpstan/phpstan": "^0.10.3",
-    "gamez/psr-testlogger": "^3",
     "thecodingmachine/phpstan-strict-rules": "^0.10.3",
-    "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev"
+    "thecodingmachine/phpstan-safe-rule": "^0.1.0@dev",
+    "gamez/psr-testlogger": "^3"
   },
   "autoload" : {
     "psr-4" : {
@@ -66,7 +65,5 @@
     "branch-alias": {
       "dev-master": "1.0-dev"
     }
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  }
 }
