not using preg match from safe for validator methods

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,7 @@ parameters:
      - "#should return array.*SharedEnvVariable.*EnvVariable#"
      - "#Cannot call method getConfig\\(\\) on .*ResponseInterface|null#"
      - "#$payload of method TheAentMachine\\Aent\\Event\\AbstractEvent::executeEvent() expects string|null, array<string>|string|null given.#"
+     - "#Function preg_match is unsafe to use#"
 includes:
     - vendor/thecodingmachine/phpstan-strict-rules/phpstan-strict-rules.neon
     - vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon
